--- a/HTML documents/Assignment1.html
+++ b/HTML documents/Assignment1.html
@@ -11,7 +11,7 @@
 				<h1>Cute dogs will be on this page</h1>
 				<h4>Lots of cute dogs</h4>
 				<p>Dogs that are cute are here.</p>
-				<img src="https://pixabay.com/photos/pug-puppy-dog-animal-cute-690566/">
+				<img src="Dog.jpg" alt="Picture of a cute dog">
 		</header>
 		<p2> Here is a fact about dogs.</p2>
 		<blockquote cite="https://www.purina.co.uk/dogs/behaviour-and-training/understanding-dog-behaviours/amazing-dog-facts">
