--- a/projects/Final_Assignment.html
+++ b/projects/Final_Assignment.html
@@ -17,7 +17,7 @@
         <br>
 
     <div id="home">
-        <video autoplay muted loop id="Typing Video">
+        <video autoplay muted loop id="Typing_Video">
             <source src="./images/Typing.mp4" type="video/mp4">
         </video>
     </div>
@@ -26,14 +26,16 @@
         <h1 style="color: white;">Athena's Portfolio</h1>
         <p>
             <strong>
-                <q>The computer programmer is a creator of the universes for which he alone is the lawgiver.
-                    <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
-                    <br>field of battle and to command such unswervingly dutiful actors or troops
-                </q>
-                <br>-Joesph Weizenbaum<br>
-                <br>
-                My name is Athena. Welcome to my portfolio website. On it, I will tell you about my background and experience.<br>
-                <br>Thank you for stopping by and enjoy!
+                    <center>
+                        <q>The computer programmer is a creator of the universes for which he alone is the lawgiver.
+                        <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
+                        <br>field of battle and to command such unswervingly dutiful actors or troops
+                        </q>
+                        <br>-Joesph Weizenbaum<br>
+                        <br>
+                         My name is Athena. Welcome to my portfolio website. On it, I will tell you about my background and experience.<br>
+                        <br>Thank you for stopping by and enjoy!
+                    </center>
             </strong>
         </p>
     </div>
@@ -44,7 +46,7 @@
         </div>
 
         <div class="Column_1">
-            <h2>About</h2>
+            <h1>About</h1>
             <p>I am a software developer in training. My father is a software develper, so I always had it around me growing up and was very interested in the tech industry. At the moment I have the basics of HTML and CSS down. At the end of the Python orientated Tech Acadamey program I am taking I will know the basics of HTML, CSS, JavaScript, and Python. I will also be a full-stack developer and would love to work with you on your projects.
                 <br><a href="#contact">Contact me below!</a>
             </p>
